# ecom-profit-engine

./: .env.example  .gitignore  README.md  app.py  bill_detail_import.py  bookkeeping_us.py  config.py  costs.py  data_quality.py  external_tracking.py  http_retry.py  main.py  meta_ads.py  meta_auth.py  normalize.py  payment_net_estimate.py  pipeline.py  pipeline_state.py  pyproject.toml  requirements.txt  sheets.py  sheets_charts.py  sheets_formatting.py  sheets_layout.py  shopify_auth.py  shopify_client.py  shopify_payouts.py  transform.py  vercel.json
.github/workflows/: ecom-profit-engine.yml
api/: __init__.py  cron.py  dashboard.py  index.py  ui.py
dashboard-web/: README.md  next.config.ts  package-lock.json  package.json
dashboard-web/scripts/: export-to-static-app.mjs
dashboard-web/src/: types.ts
dashboard-web/src/app/: globals.css  layout.tsx  providers.tsx
dashboard-web/src/lib/: api.ts  (+2 more)
data/: supplier_costs.csv
scripts/: debug_meta.py  debug_shopify.py  import_bill_detail_xls.py  pipeline_parity.py
shopify-app/: package.json  shopify.app.toml
tests/: test_bookkeeping_us.py  test_costs.py  test_data_quality.py  test_external_tracking.py  test_http_retry_hints.py  test_meta_conversion_metrics.py  test_meta_purchase_metrics.py  test_normalize.py  test_payment_net_estimate.py  test_pipeline_state.py  test_sheets_formatting.py  test_sheets_retry.py  test_shopify_client.py  test_shopify_payouts.py  test_transform.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  index.css  types.ts
(+26 files in other folders)
