[project]
name = "ecom-profit-engine"
version = "0.1.0"
requires-python = ">=3.12"
# Runtime deps live in requirements.txt; Vercel installs them via installCommand in vercel.json.

[project.scripts]
# Tells Vercel where the ASGI app lives (see FastAPI on Vercel → Exporting the application).
app = "api.index:app"
